--- a/Index.html
+++ b/Index.html
@@ -1,3 +1,5 @@
+<link rel=”stylesheet” type=”text/css” media=”all” href=”style.css” />
+
 <h1> The #Becky Project </h1>
 
 This is a landing page for a MITH735 project-in-progress by Jonelle Walker.
@@ -10,7 +12,7 @@ Here's what we have for now:
 
 Thanks for visiting!
 
-**Jonelle Walker**   
-School of Theatre, Dance, and Performance Studies  
-University of Maryland, College Park  
+**Jonelle Walker**
+School of Theatre, Dance, and Performance Studies
+University of Maryland, College Park
 jwalke15@umd.edu
