--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
 layout: default
-title: Hank Quinlan, Horrible Cop
+title: The Becky Project
 ---
 <div class="blurb">
-	<h1>Hi there, I'm Hank Quinlan!</h1>
-	<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+	<h1>Welcome to The Becky Project Demo!</h1>
+	<p>An experiment in digital gender-race performativity and curating digital media<a href="/about">Learn more about the project.</a></p>
 </div><!-- /.blurb -->
